chore: remove building unnecessary "cross-platform" files