@@ -34,11 +34,5 @@ copy DistReadme.txt dist\README.txt >NUL
 @REM It doesn't really make sense to build the bash and command files from windows, because the built java executable isn't cross platform :facepalm:
 echo Writing Script...
 echo java\bin\java.exe --module-path javafx\lib --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics -jar %jar-name% > dist/SoundInvestments.bat
-echo ./java/bin/java.exe --module-path javafx\lib --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics -jar %jar-name% > dist/SoundInvestments.bash
-echo #! /usr/bin/env bash >> dist/SoundInvestments.command
-echo cd -- \$(dirname \$BASH_SOURCE) >> dist/SoundInvestments.command
-echo java --module-path javafx/lib --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics -jar %jar-name% >> dist/SoundInvestments.command
-@REM Can't make the .command file executable from a windows machine, since windows apparently doesn't have the same file-permission scheme
-
 
 echo Done
